Removed LANUK Data Frame and cleaned the code

--- a/notebooks/gauges_data_example.ipynb
+++ b/notebooks/gauges_data_example.ipynb
@@ -13,13 +13,12 @@
     "- **DWD/WNH/LANUK**\n",
     "\n",
     "- use the same API helper function `fetch_gauges(...)`\n",
-    "- convert the JSON response to a pandas `DataFrame`\n",
-    "- display only the first rows with `df.head()` (no extra processing or plots)\n"
+    "- convert the JSON response to a pandas `DataFrame`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "03481c2b-9fee-4e31-80f0-b5d372e1113f",
    "metadata": {},
    "outputs": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "b65b2df7-b2f5-451c-9cf0-31c55c7b7c2e",
    "metadata": {},
    "outputs": [],
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "3da9d6d4-ac18-4d3c-94a8-dfb6d5fc812f",
    "metadata": {},
    "outputs": [],
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "67025392-ec67-480d-a29a-95f238f55d35",
    "metadata": {},
    "outputs": [
@@ -255,15 +254,15 @@
        "      <th>4</th>\n",
        "      <td>2025-11-13T12:53:00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Bochum</td>\n",
-       "      <td>Bochum</td>\n",
+       "      <td>Lübeck</td>\n",
+       "      <td>Lübeck_Blankensee</td>\n",
        "      <td>DWD</td>\n",
-       "      <td>51.5026</td>\n",
-       "      <td>7.2289</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00555</td>\n",
+       "      <td>53.8025</td>\n",
+       "      <td>10.6989</td>\n",
+       "      <td>3</td>\n",
+       "      <td>03086</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-999</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,24 +274,24 @@
        "1  2025-11-13T12:55:00                   0.0  Lüdenscheid        Lüdenscheid   \n",
        "2  2025-11-13T12:54:00                   0.0       Lübeck  Lübeck_Blankensee   \n",
        "3  2025-11-13T12:54:00                   0.0  Lüdenscheid        Lüdenscheid   \n",
-       "4  2025-11-13T12:53:00                   0.0       Bochum             Bochum   \n",
+       "4  2025-11-13T12:53:00                   0.0       Lübeck  Lübeck_Blankensee   \n",
        "\n",
        "  channel  latitude  longitude  station_id station_code original_value  \\\n",
        "0     DWD   53.8025    10.6989           3        03086            0.0   \n",
        "1     DWD   51.2452     7.6425           2        03098            0.0   \n",
        "2     DWD   53.8025    10.6989           3        03086            0.0   \n",
        "3     DWD   51.2452     7.6425           2        03098            0.0   \n",
-       "4     DWD   51.5026     7.2289           1        00555            0.0   \n",
+       "4     DWD   53.8025    10.6989           3        03086            0.0   \n",
        "\n",
        "   original_state  \n",
        "0               0  \n",
        "1               0  \n",
        "2               0  \n",
        "3               0  \n",
-       "4            -999  "
+       "4               0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,8 +299,7 @@
    "source": [
     "rows_dwd = fetch_gauges(\n",
     "    channel=\"DWD\",\n",
-    "    hours=24*365,                 # larger window so dev DB returns data\n",
-    "    only_with_known_location=False,\n",
+    "    hours=24*365,                 \n",
     "    limit=50\n",
     ")\n",
     "\n",
@@ -346,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "e75bd482-09c2-4ebf-adad-33867384d214",
    "metadata": {},
    "outputs": [
@@ -452,15 +450,15 @@
        "      <th>4</th>\n",
        "      <td>2025-11-13T12:53:00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Bochum</td>\n",
-       "      <td>Bochum</td>\n",
+       "      <td>Lübeck</td>\n",
+       "      <td>Lübeck_Blankensee</td>\n",
        "      <td>DWD</td>\n",
-       "      <td>51.5026</td>\n",
-       "      <td>7.2289</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00555</td>\n",
+       "      <td>53.8025</td>\n",
+       "      <td>10.6989</td>\n",
+       "      <td>3</td>\n",
+       "      <td>03086</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-999</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -472,35 +470,32 @@
        "1  2025-11-13T12:55:00                   0.0  Lüdenscheid        Lüdenscheid   \n",
        "2  2025-11-13T12:54:00                   0.0       Lübeck  Lübeck_Blankensee   \n",
        "3  2025-11-13T12:54:00                   0.0  Lüdenscheid        Lüdenscheid   \n",
-       "4  2025-11-13T12:53:00                   0.0       Bochum             Bochum   \n",
+       "4  2025-11-13T12:53:00                   0.0       Lübeck  Lübeck_Blankensee   \n",
        "\n",
        "  channel  latitude  longitude  station_id station_code original_value  \\\n",
        "0     DWD   53.8025    10.6989           3        03086            0.0   \n",
        "1     DWD   51.2452     7.6425           2        03098            0.0   \n",
        "2     DWD   53.8025    10.6989           3        03086            0.0   \n",
        "3     DWD   51.2452     7.6425           2        03098            0.0   \n",
-       "4     DWD   51.5026     7.2289           1        00555            0.0   \n",
+       "4     DWD   53.8025    10.6989           3        03086            0.0   \n",
        "\n",
        "   original_state  \n",
        "0               0  \n",
        "1               0  \n",
        "2               0  \n",
        "3               0  \n",
-       "4            -999  "
+       "4               0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Example 2 — DWD gauge data with pagination\n",
-    "\n",
     "df_dwd_paginated = paginate_gauges(\n",
     "    channel=\"DWD\",\n",
     "    hours=24*365,\n",
-    "    only_with_known_location=False,\n",
     ")\n",
     "\n",
     "print(f\"Rows in window (DWD, paginated): {len(df_dwd_paginated)}\")\n",
@@ -527,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "0fc1d1e5-6e57-4435-a4df-5e474593692f",
    "metadata": {},
    "outputs": [
@@ -535,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows returned (WNH): 0\n"
+      "Rows returned (WNH): 50\n"
      ]
     },
     {
@@ -559,65 +554,175 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>measurement_date</th>\n",
+       "      <th>precipitation_height</th>\n",
+       "      <th>city</th>\n",
+       "      <th>station_name</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>station_code</th>\n",
+       "      <th>original_value</th>\n",
+       "      <th>original_state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-11-25T15:21:00</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Oege_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3451</td>\n",
+       "      <td>7.5876</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-11-25T15:21:00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Finanzamt_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3604</td>\n",
+       "      <td>7.4768</td>\n",
+       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-11-25T15:21:00</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Altenhagen_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3784</td>\n",
+       "      <td>7.4700</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-11-25T15:20:00</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Hunsdiek_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3241</td>\n",
+       "      <td>7.5442</td>\n",
+       "      <td>25</td>\n",
+       "      <td>22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-11-25T15:20:00</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Delstern_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3470</td>\n",
+       "      <td>7.5107</td>\n",
+       "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "      measurement_date  precipitation_height   city    station_name  \\\n",
+       "0  2025-11-25T15:21:00                  0.10  Hagen        Oege_WNH   \n",
+       "1  2025-11-25T15:21:00                  0.02  Hagen   Finanzamt_WNH   \n",
+       "2  2025-11-25T15:21:00                  0.03  Hagen  Altenhagen_WNH   \n",
+       "3  2025-11-25T15:20:00                  0.40  Hagen    Hunsdiek_WNH   \n",
+       "4  2025-11-25T15:20:00                  0.03  Hagen    Delstern_WNH   \n",
+       "\n",
+       "      channel  latitude  longitude  station_id station_code original_value  \\\n",
+       "0  Wetternetz   51.3451     7.5876          19           16           None   \n",
+       "1  Wetternetz   51.3604     7.4768          18           15           None   \n",
+       "2  Wetternetz   51.3784     7.4700          10            7           None   \n",
+       "3  Wetternetz   51.3241     7.5442          25           22           None   \n",
+       "4  Wetternetz   51.3470     7.5107          24           21           None   \n",
+       "\n",
+       "  original_state  \n",
+       "0           None  \n",
+       "1           None  \n",
+       "2           None  \n",
+       "3           None  \n",
+       "4           None  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rows_wnh = fetch_gauges(\n",
-    "    channel=\"WNH\",\n",
-    "    hours=24*365,\n",
-    "    only_with_known_location=False,\n",
-    "    limit=50\n",
+    "    channel=\"WNH\",                 # Enum value\n",
+    "    hours=24 * 365,                \n",
+    "    limit=50,\n",
     ")\n",
-    "\n",
     "df_wnh = to_df(rows_wnh)\n",
-    "\n",
     "print(f\"Rows returned (WNH): {len(df_wnh)}\")\n",
     "df_wnh.head()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "700bf249-cc8f-4a60-9324-ec6ecfee2c78",
+   "id": "b846c598-d7d2-48b3-9da2-0ff1344a5d84",
    "metadata": {},
    "source": [
-    "## Example 4 — LANUK gauge data (no pagination)\n",
+    "## Example 4 — WNH gauge data with pagination\n",
     "\n",
-    "**Purpose**\n",
+    "Retrieve **Wetternetz (WNH)** rain-gauge measurements over a large time window by fetching the data in multiple pages instead of a single API call.\n",
     "\n",
-    "Again reuse the same query, this time for the **LANUK** channel.\n",
+    "**Why pagination?**\n",
     "\n",
-    "**Notes**\n",
+    "WNH data often contains many minute-level measurements per station.  \n",
+    "To avoid:\n",
     "\n",
-    "- We only change `channel=\"LANUK\"`."
+    "- requesting too many rows at once  \n",
+    "- API timeouts  \n",
+    "- memory overload  \n",
+    "\n",
+    "we fetch the data in **chunks** using `limit` and `offset`.\n",
+    "\n",
+    "**What this below example does**\n",
+    "\n",
+    "1. Calls the `/gauges` endpoint repeatedly with:\n",
+    "   - `channel=\"WNH\"`\n",
+    "   - a fixed page size (`limit`)\n",
+    "   - an increasing `offset`\n",
+    "2. Retrieves all available **WNH** measurements for the last 1 year (`hours = 24 * 365`).\n",
+    "3. Combines all collected pages into one final DataFrame.\n",
+    "4. Shows the total number of WNH rows returned and prints a preview."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "be3a017c-18c0-4bf1-b9f1-3bdf6b517ff9",
+   "execution_count": 29,
+   "id": "65fe4567-ee76-412f-82c7-30b3b806dc26",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows returned (LANUK): 0\n"
+      "Rows in window (WNH, paginated): 1980\n"
      ]
     },
     {
@@ -641,45 +746,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>measurement_date</th>\n",
+       "      <th>precipitation_height</th>\n",
+       "      <th>city</th>\n",
+       "      <th>station_name</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>station_code</th>\n",
+       "      <th>original_value</th>\n",
+       "      <th>original_state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-11-25T15:21:00</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Oege_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3451</td>\n",
+       "      <td>7.5876</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-11-25T15:21:00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Finanzamt_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3604</td>\n",
+       "      <td>7.4768</td>\n",
+       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-11-25T15:21:00</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Altenhagen_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3784</td>\n",
+       "      <td>7.4700</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-11-25T15:20:00</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Hunsdiek_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3241</td>\n",
+       "      <td>7.5442</td>\n",
+       "      <td>25</td>\n",
+       "      <td>22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-11-25T15:20:00</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>Hagen</td>\n",
+       "      <td>Delstern_WNH</td>\n",
+       "      <td>Wetternetz</td>\n",
+       "      <td>51.3470</td>\n",
+       "      <td>7.5107</td>\n",
+       "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "      measurement_date  precipitation_height   city    station_name  \\\n",
+       "0  2025-11-25T15:21:00                  0.10  Hagen        Oege_WNH   \n",
+       "1  2025-11-25T15:21:00                  0.02  Hagen   Finanzamt_WNH   \n",
+       "2  2025-11-25T15:21:00                  0.03  Hagen  Altenhagen_WNH   \n",
+       "3  2025-11-25T15:20:00                  0.40  Hagen    Hunsdiek_WNH   \n",
+       "4  2025-11-25T15:20:00                  0.03  Hagen    Delstern_WNH   \n",
+       "\n",
+       "      channel  latitude  longitude  station_id station_code original_value  \\\n",
+       "0  Wetternetz   51.3451     7.5876          19           16           None   \n",
+       "1  Wetternetz   51.3604     7.4768          18           15           None   \n",
+       "2  Wetternetz   51.3784     7.4700          10            7           None   \n",
+       "3  Wetternetz   51.3241     7.5442          25           22           None   \n",
+       "4  Wetternetz   51.3470     7.5107          24           21           None   \n",
+       "\n",
+       "  original_state  \n",
+       "0           None  \n",
+       "1           None  \n",
+       "2           None  \n",
+       "3           None  \n",
+       "4           None  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rows_lanuk = fetch_gauges(\n",
-    "    channel=\"LANUK\",\n",
-    "    hours=24*365,\n",
-    "    only_with_known_location=False,\n",
-    "    limit=50\n",
+    "df_wnh_paginated = paginate_gauges(\n",
+    "    channel=\"WNH\",              # IMPORTANT: use \"WNH\", not \"Wetternetz\"\n",
+    "    hours=24 * 365,             # last 1 year of data\n",
     ")\n",
     "\n",
-    "df_lanuk = to_df(rows_lanuk)\n",
-    "\n",
-    "print(f\"Rows returned (LANUK): {len(df_lanuk)}\")\n",
-    "df_lanuk.head()\n"
+    "print(f\"Rows in window (WNH, paginated): {len(df_wnh_paginated)}\")\n",
+    "df_wnh_paginated.head()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65fe4567-ee76-412f-82c7-30b3b806dc26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
